--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "version": 2,
   "builds": [{
-    "src": "*.js",
-    "use": "@vercel/node"
+    "src": "*package.json",
+    "use": "vercel-sapper"
   }],
   "routes": [{
     "src": "/(.*)",
