--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,14 @@
 {
   "version": 2,
   "builds": [{
-    "src": "*package.json",
-    "use": "vercel-sapper"
-  }],
+      "src": "package.json",
+      "use": "vercel-sapper"
+    },
+    {
+      "src": "server.js",
+      "use": "@vercel/node"
+    }
+  ],
   "routes": [{
     "src": "/(.*)",
     "dest": "/"
